--- a/web-scraping.ipynb
+++ b/web-scraping.ipynb
@@ -6,6 +6,90 @@
    "source": [
     "# Setting-up work environment"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\vande70\\AppData\\Local\\Continuum\\anaconda3\\envs\\tm\\python.exe\n",
+      "OneDrive - Cronos\\Cursussen\\TextMining\\TextMiningStatisticians\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Show environment\n",
+    "import sys\n",
+    "print(sys.executable)\n",
+    "\n",
+    "# Set working directory\n",
+    "import os\n",
+    "work_dir = os.path.join(\"OneDrive - Cronos\", \"Cursussen\", \"TextMining\", \"TextMiningStatisticians\")\n",
+    "print(work_dir)\n",
+    "\n",
+    "# Import necessary packages\n",
+    "from scrapy import Selector\n",
+    "import requests\n",
+    "\n",
+    "from bs4 import BeautifulSoup\n",
+    "\n",
+    "import regex as re\n",
+    "\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Find the list of statisticians"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create a file containing all elements in the HTML document"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You have found:  1843 elements in the HTML document\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create the string html containing the HTML source\n",
+    "url = 'https://en.wikipedia.org/wiki/List_of_statisticians'\n",
+    "html = requests.get(url).content\n",
+    "\n",
+    "# Create the Selector object sel from html\n",
+    "sel = Selector(text = html)\n",
+    "\n",
+    "# Print out the number of elements in the HTML document\n",
+    "print(\"You have found: \", len(sel.xpath('//*')), \"elements in the HTML document\" )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -24,7 +108,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.7"
   },
   "toc": {
    "base_numbering": 1,
